--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </script>
     <script>
       var slideshow = remark.create({
-        sourceUrl: 'README.md',
+        sourceUrl: 'index.md',
         ratio: '4:3',
         countIncrementalSlides: false,
         highlightLanguage: 'javascript',
