--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       @import url(https://fonts.googleapis.com/css?family=Droid+Sans:400,700,400italic);
       @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
 
+      textarea { visibility: hidden; }
       body { font-family: 'Droid Sans'; }
       h1, h2, h3 {
         font-family: 'Yanone Kaffeesatz';
@@ -29,7 +30,7 @@
     <script>
       var slideshow = remark.create({
         sourceUrl: 'index.md',
-        ratio: '4:3',
+        ratio: '16:9',
         countIncrementalSlides: false,
         highlightLanguage: 'javascript',
         highlightStyle: 'monokai',
